--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -139,7 +139,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -148,9 +148,9 @@
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
-<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
 <li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
