--- a/gb/15/4/21/n4416482.md
+++ b/gb/15/4/21/n4416482.md
@@ -1,8 +1,8 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kztpea348/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kztpea348/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kztpea348/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>恶少欺小 书生仗义惩凶</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_769571272-320x200.jpg" />
 <h6></h6>
 <hr>
 <p>成幼文做洪州（即今江西南昌）录事参军的官，住家靠近大街。有一天坐在窗下临街而观，其时雨后初晴道路泥泞，见有一小孩在街上卖鞋，衣衫甚是褴褛。忽有一恶少快步行过在小孩身上一撞，将他手中所提的新鞋都撞在泥泞中。</p>
@@ -19,38 +19,50 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/15/4/21/n4416482.htm">恶少欺小 书生仗义惩凶</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/17/7/3/n9351025.htm">美军特种部队青睐哪四种军车</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/7/3/n9347891.htm">纪念“七七事变”80周年大会 7月6日举行</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/6/29/n9337165.htm">一题台湾小学生功课 引发万名网民论战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/6/26/n9321188.htm">89岁老兵拾荒 拼建台版《霍尔移动城堡》</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878224.htm">你做对了吗？ 常见的面包储藏迷思</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/20/n3968730.md#1">中华武术的真正价值——武德</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/13/10/5/n3979997.md#1">武术就是修炼 能达天人合一之境</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/13/10/12/n3984880.md#1">南北派武林高手齐聚</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/14/12/3/n4309834.md#1">真人不露相 露相不真人</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/14/12/7/n4313351.md#1">强中自有强中手</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/14/12/22/n4324155.md#1">人外有人 天外有天</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/19/5/16/n11263424.md#1">【征文】刘晓：古代侠士与侠义精神</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/11/20/n10863162.md#1">精通“十八般武艺”是哪十八种？</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/4/4/n7519778.md#1">南台宋江阵源流  一说少林拳化身</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/15/8/17/n4505907.md#1">大智大勇处变不惊 邹仆妻擒盗报夫仇</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/15/4/21/n4416482.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487770.md#1">【远见快评】拜登家丑闻4连爆 中共人质外交</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486080.md#1">丁小芹卖假包需入狱服刑 判刑2年半定谳</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485655.md#1">全球15国民调：台湾人最希望川普当选</a></li>
+<li><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kztpea348/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/21/n4416482.htm">恶少欺小 书生仗义惩凶</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kztpea348/djy/blob/master/gb/15/4/21/n4416482.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kztpea348/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kztpea348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kztpea348/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
