--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066835.md#1" target="_blank">袁斌：戈培尔妻子的理想歧途</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/18/n3966634.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑3</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
