--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,14 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/kztpea348/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>英国共登记逾5.9万起染疫身亡病例</h3>
+<p>英国国家统计局（Office for National Statistics ）周二（20日）发布的数据显示，截至10月9日，英格兰和威尔斯出现了53,863例与中共病毒有关的死亡，并在10月17日前进行了登记。</p>
+<p>苏格兰国家档案局（National Records for Scotland）上周发布的数据显示，截至10月11日，苏格兰共登记了4,301例涉及中共病毒的死亡。而根据北爱尔兰统计和研究局的数据，截至10月9日，北爱尔兰出现了915例死亡（并在10月14日之前进行了登记）。 </p>
+<blockquote class="twitter-tweet">
+<p lang="en" dir="ltr">UK coronavirus live: Greater Manchester to put last-minute plan to Johnson; 59,079 deaths involved Covid <ahref="https://t.co/aCrFG6G6dW">https://t.co/aCrFG6G6dW</a></p>
+<p>&mdash; The Guardian (@guardian) <ahref="https://twitter.com/guardian/status/1318484843467055105?ref_src=twsrc%5Etfw">October 20, 2020</a></p></blockquote>
+<p> <a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
+综合起来看，这些数字意味着，迄今英国已登记59,079例死亡证上提及中共病毒的死亡，包括疑似病例。</p>
 <h3>土耳其新增病例超2,000 达5月初水平</h3>
 <p>周一（19日），土耳其单日新增病例数突破了2,000，达到5月初对企业和家庭实施限制时最后一次所见的水平。</p>
 <p>路透社报导说，卫生部的数据显示，又有2,026个表现出症状的人确诊染疫。土耳其继续仅报告有症状的病例，遭到反对派和医学专家的批评。</p>
@@ -139,7 +147,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
