--- a/gb/20/10/19/n12487702.md
+++ b/gb/20/10/19/n12487702.md
@@ -23,6 +23,11 @@
 <p>随着欧洲各地案例的增多，英国、法国、西班牙的一些城市正在集中力量实施更严格的封锁措施来遏制病毒传播，而包括川普（特朗普）总统在内的许多美国领导人继续敦促开放经济。川普表示，如果他“完全”听取了科学家有关中共病毒相关封锁措施的建议，美国早就陷入了“大萧条”之中。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/jpmljf3654/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>德国对主要热点区实行地方封锁</h3>
+<p>从周二（20日）下午2点开始，德国对巴伐利亚州的贝希特斯加登兰县（Berchtesgadener Land）实行封锁，因为该地区变成了德国主要的疫情热点区。</p>
+<p>学校、托儿所和餐馆将从周二起关闭，下午2点以后，居民将不被允许离家外出，除非有充分的理由（例如履行工作承诺、购买生活必需品或户外运动）。这是巴伐利亚州自4月以来首次实施地方封锁。</p>
+<p>贝希特斯加登兰县面积为320平方英里，人口约10万，目前是德国7天发病率最高的地区，一周内每10万居民中新增 272,8 人感染。</p>
+<p>尽管德国政府坚持将不惜一切代价避免二度实施全国性封锁，但一些官员近日已提议封锁地区，以遏制病毒传播。</p>
 <h3>英国共登记逾5.9万起染疫身亡病例</h3>
 <p>英国国家统计局（Office for National Statistics ）周二（20日）发布的数据显示，截至10月9日，英格兰和威尔斯出现了53,863例与中共病毒有关的死亡，并在10月17日前进行了登记。</p>
 <p>苏格兰国家档案局（National Records for Scotland）上周发布的数据显示，截至10月11日，苏格兰共登记了4,301例涉及中共病毒的死亡。而根据北爱尔兰统计和研究局的数据，截至10月9日，北爱尔兰出现了915例死亡（并在10月14日之前进行了登记）。 </p>
@@ -151,7 +156,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/12/18/n2367165.md#1" target="_blank">组图：法轮功在海峡两岸的强烈对比</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
