--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522711.md#1" title="美印日澳联合军演 联手应对中共军事扩张""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50552713693_1f5f47a336_o-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522124.md#1" title="新西兰政要：我们都应站出来对中共说不""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-2-new-zealand-auckland_02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://aovsvx368.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525804.md#1">王嘉廉医疗中心11/9法拉盛免费注射流感疫苗活动</a><br>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525837.md#1">疫情期捣蛋减少 纽约上学年停学率下降44.5%</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522552.md#1">【名家专栏】被疫情的谎言绑架</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525623.md#1">美国大选世界瞩目 专家：中国议题成重点</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525723.md#1">川普律师：总统有权诉诸所有法律选项</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525669.md#1">美众院选举 民主党正在失去一些重要席位</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525860.md#1">詹乐霞：缺席选票不合格 选后5天可改</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525655.md#1">2020年海外青年华语文研习班第4梯次即将截止</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525724.md#1">社区看板：华策会就业协助中心新服务时间</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525804.md#1">王嘉廉医疗中心11/9法拉盛免费注射流感疫苗活动</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/5/n12525837.md#1">疫情期捣蛋减少 纽约上学年停学率下降44.5%</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522552.md#1">【名家专栏】被疫情的谎言绑架</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,862,768 人
+!共 366,862,809 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
