--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,18 +13,18 @@
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524693.md#1" title="川普：停止计票是舞弊 得票率领先足以胜选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12521384.md#1" title="盘点纽约统战组织(2)华美协进社与文化统战""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/144741-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/ibqnux3284/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://ibqnux3284.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被行拘10天</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12527058.md#1">美大选结果未明之际 韩外长周日将访华府</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12527001.md#1">中共喉舌罕见批评特斯拉 引关注</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被行拘10天</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526403.md#1">分析：中共为何把官员私藏禁书列为首罪</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12526005.md#1">确保选举可信 川普在两州提告 要一州重计票</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/5/n12526806.md#1">纽约选民抗议大选舞弊 要求公正结果</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12522937.md#1">马云被约谈 电影“功守道”片段走红</a><br>
-<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12522469.md#1">美中媒体战升级 汪文斌跳脚 美国强硬回呛</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
+<a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/3/n12522469.md#1">美中媒体战升级 汪文斌跳脚 美国强硬回呛</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
 <a href="https://github.com/ibqnux3284/djy/blob/master/gb/20/11/4/n12524300.md#1">美州务卿：从未在大选投票日当晚得最终数据</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,885,496 人
+!共 366,886,359 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
